# ext-mumak

./: .gitignore  Cargo.toml
.github/workflows/: clippy.yml  controller.yml  pgbouncer-tier-updater.yml  postgres.yml
bootstrap/: main.tf  variables.tf
bootstrap/cell/: main.tf  variables.tf
bootstrap/crds/: main.tf
bootstrap/feature/: configs.tf  main.tf  monitor.tf  operator.tf  rbac.tf  secret.tf
bootstrap/indexer/: block.daemon.toml.tftpl  block_indexer.tf  config.tf  daemon.toml.tftpl  indexer.tf  main.tf  monitor.tf  tf.daemon.toml.tftpl  tx.daemon.toml.tftpl  tx_indexer.tf  utxo.daemon.toml.tftpl  utxo_indexer.tf
bootstrap/pgbouncer/: main.tf  monitor.tf  pg-bouncer.tf  pgbouncer.ini.tftpl  tiers.toml  users.txt.tftpl
bootstrap/postgres/: main.tf  monitor.tf  pg-configs.tf  postgres.tf  postgresql.conf
bootstrap/pvc/: main.tf
bootstrap/service/: main.tf
docker/: dockerfile.operator  dockerfile.pgbouncer-tier-updater  dockerfile.postgres  init-db.sh
examples/: docker-compose.yml  init.sql  manifest.yaml  postgresql.conf  setup
operator/: Cargo.toml
operator/src/: config.rs  controller.rs  crdgen.rs  lib.rs  main.rs  metrics.rs  postgres.rs  utils.rs
operator/yaml/: crd.yaml  port.yaml
pgbouncer-tier-updater/: Cargo.toml
pgbouncer-tier-updater/src/: config.rs  main.rs  tiers.rs  watch.rs
scripts/: create_indexes.yml
