[package]
name = "operator"
version = "0.1.0"
edition = "2021"
default-run = "controller"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
futures = "0.3.30"
k8s-openapi = { version = "0.22.0", features = ["latest"] }
kube = { version = "0.91.0", features = ["runtime", "client", "derive"] }
lazy_static = "1.4.0"
prometheus = "0.13.4"
schemars = "0.8.20"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
serde_yaml = "0.9.34"
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
http-body-util = "0.1.0"
hyper = { version = "1.1.0", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["full"] }
chrono = "0.4.38"
reqwest = { version = "0.12.4", features = ["json"] }
bech32 = "0.11.0"
deadpool-postgres = "0.13.2"
tokio-postgres = "0.7.10"
argon2 = "0.5.3"
base64 = "0.22.1"

[[bin]]
name = "controller"
path = "src/main.rs"

[[bin]]
name = "crdgen"
path = "src/crdgen.rs"

[lib]
path = "src/lib.rs"

