[package]
name = "pgbouncer-tier-updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
futures = "0.3.30"
futures-util = "0.3.30"
k8s-openapi = { version = "0.22.0", features = ["latest"] }
notify = "6.1.1"
operator = { path = "../operator" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.10"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio-postgres = "0.7.10"
